# mlops-template

./: .gitignore  Dockerfile.api  Dockerfile.ui  README.md  pyproject.toml
config/: config.yaml  config_lgb.yaml  config_lgb_params.yaml  config_lr.yaml
config/experiment_tracker/: local.yaml  mlflow.yaml  wandb.yaml
config/messaging/: rabbitmq.yaml
config/model/: lgb.yaml  lgb_params.yaml  lightgbm.yaml  logistic_regression.yaml  lr.yaml
data/bank/: README.csv  train.csv
docker/: Dockerfile.api  Dockerfile.drift_detector  Dockerfile.ui  docker-compose.yml
notebooks/: eda.ipynb
src/api/: endpoints.py
src/apps/: app_streamlit.py  drift_detector.py  serving.py  train.py
src/artifacts/: __init__.py  load_artifacts.py  save_artifact.py  save_artifacts.py
src/data/: __init__.py  load_data.py
src/evaluation/: __init__.py  confusion_matrix_figure.py  evaluate.py  precision_recall_figure.py  roc_auc_figure.py
src/experiment_tracker/: __init__.py  experiment_tracker.py  factory.py
src/explainer/: shap_explainer.py
src/features/: __init__.py  prepare_training_data.py  preprocess.py
src/messaging/: __init__.py  factory.py
src/models/: __init__.py  factory.py  train.py
src/monitoring/: __init__.py  drift_detector.py  drift_state.py
src/pipeline/: __init__.py  inference_pipeline.py  train_pipeline.py
src/schemas/: request.py  response.py
src/scripts/: serving.py  train.py
src/tuning/: __init__.py  base_model_tuner.py  factory.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/artifacts/: test_save_artifacts.py
tests/data/: test_load_data.py
tests/evaluation/: test_evaluate.py
tests/features/: test_preprocess.py
tests/models/: test_factory.py  test_train.py
tests/utils/: test_config_loader.py
(+14 files in other folders)
