[project]
name = "breast_cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.11",
    "fastapi>=0.116.1",
    "jupyterlab>=4.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
commits = [
    "pre-commit>=4.2.0",
]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
ignore = ["F401"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
