[project]
name = "breast_cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beaverfe>=0.3.0",
    "evidently>=0.7.11",
    "fastapi>=0.116.1",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "mlflow>=3.2.0",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
    "wandb>=0.21.1",
]

[dependency-groups]
commits = [
    "pre-commit>=4.2.0",
]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
